# nebulavault

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/shaders/: nebula.wgsl
migrations/: 001_initial_schema.sql
src/: db.rs  lib.rs  main.rs  models.rs  ssh.rs  terminal_launcher.rs  vault.rs
src/gui/: app.rs  messages.rs  mod.rs  state.rs
src/gui/views/: auth.rs  host_dialogs.rs  identity_dialogs.rs  launcher_example.rs  main_view.rs  mod.rs  settings.rs  terminal.rs
src/gui/widgets/: glass.rs  gradient_bg.rs  mod.rs  nebula_shader.rs
